<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Cursor On Target Settings" />

    <com.atakmap.android.gui.PanCheckBoxPreference
        android:defaultValue="true"
        android:key="cotgenerator.use_random_callsigns"
        android:summaryOff="@string/summary_off_use_random_callsigns"
        android:summaryOn="@string/summary_on_use_random_callsigns"
        android:title="@string/desc_use_random_callsigns" />

    <com.jonapoul.cotgenerator.plugin.prefs.RefreshCallsignPreference
        android:defaultValue="CALLSIGN"
        android:dialogTitle="@string/desc_base_callsign"
        android:key="cotgenerator.base_callsign"
        android:title="@string/desc_base_callsign" />

    <com.atakmap.android.gui.PanCheckBoxPreference
        android:defaultValue="true"
        android:key="cotgenerator.use_indexed_callsign"
        android:summaryOff="@string/summary_off_use_indexed_callsigns"
        android:title="@string/desc_use_indexed_callsigns" />

    <com.atakmap.android.gui.PanCheckBoxPreference
        android:defaultValue="true"
        android:key="cotgenerator.use_random_team_colours"
        android:summaryOff="@string/summary_off_use_random_team_colours"
        android:summaryOn="@string/summary_on_use_random_team_colours"
        android:title="@string/desc_use_random_team_colours" />

    <com.atakmap.android.gui.PanListPreference
        android:defaultValue="Cyan"
        android:entries="@array/teams"
        android:entryValues="@array/teams"
        android:key="cotgenerator.team_colour"
        android:title="@string/desc_team_colour" />

    <com.atakmap.android.gui.PanCheckBoxPreference
        android:defaultValue="true"
        android:key="cotgenerator.use_random_roles"
        android:summaryOff="@string/summary_off_use_random_roles"
        android:summaryOn="@string/summary_on_use_random_roles"
        android:title="@string/desc_use_random_roles" />

    <com.atakmap.android.gui.PanListPreference
        android:defaultValue="Team Member"
        android:entries="@array/roles"
        android:entryValues="@array/roles"
        android:key="cotgenerator.role"
        android:title="@string/desc_role" />

    <com.atakmap.android.gui.PanEditTextPreference
        android:defaultValue="10"
        android:dialogTitle="@string/desc_icon_count"
        android:inputType="number"
        android:key="cotgenerator.icon_count"
        android:title="@string/desc_icon_count" />

    <com.atakmap.android.gui.PanEditTextPreference
        android:defaultValue="5"
        android:dialogTitle="@string/desc_stale_timer"
        android:inputType="number"
        android:key="cotgenerator.stale_timer"
        android:title="@string/desc_stale_timer" />

    <PreferenceCategory android:title="Location Settings" />

    <com.atakmap.android.gui.PanCheckBoxPreference
        android:defaultValue="true"
        android:key="cotgenerator.follow_self_marker"
        android:summaryOff="@string/summary_off_follow_self_marker"
        android:summaryOn="@string/summary_on_follow_self_marker"
        android:title="@string/desc_follow_self_marker" />

    <com.atakmap.android.gui.PanEditTextPreference
        android:defaultValue="51.238956"
        android:dialogTitle="@string/desc_centre_latitude"
        android:inputType="number"
        android:key="cotgenerator.centre_latitude"
        android:title="@string/desc_centre_latitude" />

    <com.atakmap.android.gui.PanEditTextPreference
        android:defaultValue="-0.672416"
        android:dialogTitle="@string/desc_centre_longitude"
        android:inputType="number"
        android:key="cotgenerator.centre_longitude"
        android:title="@string/desc_centre_longitude" />

    <com.atakmap.android.gui.PanCheckBoxPreference
        android:defaultValue="true"
        android:key="cotgenerator.stay_at_ground_level"
        android:summaryOff="@string/summary_off_stay_at_ground_level"
        android:summaryOn="@string/summary_on_stay_at_ground_level"
        android:title="@string/desc_stay_at_ground_level" />

    <com.atakmap.android.gui.PanEditTextPreference
        android:defaultValue="0"
        android:dialogTitle="@string/desc_centre_altitude"
        android:inputType="number"
        android:key="cotgenerator.centre_altitude"
        android:title="@string/desc_centre_altitude" />

    <com.atakmap.android.gui.PanEditTextPreference
        android:defaultValue="200"
        android:dialogTitle="@string/desc_radial_distribution"
        android:inputType="number"
        android:key="cotgenerator.radial_distribution"
        android:title="@string/desc_radial_distribution" />

    <com.atakmap.android.gui.PanEditTextPreference
        android:defaultValue="5"
        android:dialogTitle="@string/desc_movement_speed"
        android:inputType="number"
        android:key="cotgenerator.movement_speed"
        android:title="@string/desc_movement_speed" />

    <PreferenceCategory android:title="Transmission Settings" />

    <com.atakmap.android.gui.PanEditTextPreference
        android:defaultValue="5"
        android:dialogTitle="@string/desc_update_period"
        android:inputType="number"
        android:key="cotgenerator.update_period"
        android:title="@string/desc_update_period" />

</PreferenceScreen>

