<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/section_body"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HomeSectionCheckboxText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/centre_point_follow_self" />

        <CheckBox
            android:id="@+id/follow_self_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            style="@style/HomeSectionCheckboxText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/centre_point_draw_circle" />

        <CheckBox
            android:id="@+id/draw_circle_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HomeSectionCheckboxText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/centre_point_stay_ground_level" />

        <CheckBox
            android:id="@+id/ground_level_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/HomeSectionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/home_text_splitter_margin"
                    android:layout_weight="1"
                    android:text="@string/centre_point_latitude_title" />

                <TextView
                    android:id="@+id/text_latitude"
                    style="@style/HomeSectionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/home_text_splitter_margin"
                    android:layout_weight="2"
                    tools:text="12.34567°" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/HomeSectionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/home_text_splitter_margin"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/centre_point_longitude_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_longitude"
                    style="@style/HomeSectionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/home_text_splitter_margin"
                    android:layout_weight="2"
                    tools:text="0.123456°" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/HomeSectionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/home_text_splitter_margin"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/centre_point_altitude_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_altitude"
                    style="@style/HomeSectionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/home_text_splitter_margin"
                    android:layout_weight="2"
                    tools:text="12.345m HAE" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/pick_new_centre_button"
                style="@style/darkButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/find_location"
                android:text="@string/centre_point_picker_button"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/pan_to_centre_button"
                style="@style/darkButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/pan_to"
                android:text="@string/centre_point_pan_button"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>