<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/HomeSectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/centre_point" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/HomeSectionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/home_text_splitter_margin"
                    android:layout_weight="1"
                    android:text="@string/centre_point_latitude_title" />

                <TextView
                    android:id="@+id/text_latitude"
                    style="@style/HomeSectionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/home_text_splitter_margin"
                    android:layout_weight="1"
                    tools:text="12.34567°" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/HomeSectionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/home_text_splitter_margin"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/centre_point_longitude_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_longitude"
                    style="@style/HomeSectionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/home_text_splitter_margin"
                    android:layout_weight="1"
                    tools:text="0.123456°" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/HomeSectionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/home_text_splitter_margin"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/centre_point_altitude_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_altitude"
                    style="@style/HomeSectionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/home_text_splitter_margin"
                    android:layout_weight="1"
                    tools:text="12.345m HAE" />

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/find_centre_button"
            style="@style/darkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/find_location"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/pan_to_centre_button"
            style="@style/darkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/pan_to"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/desc_follow_self_marker"
            style="@style/HomeSectionCheckboxText"
            android:layout_weight="5" />

        <CheckBox
            android:id="@+id/follow_self_checkbox"
            android:checked="false"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
